<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="keene.demo.coursedemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            style="@style/text_style"
            android:gravity="center_horizontal"
            android:text="@string/hello" />

        <Button
            android:id="@+id/data_pass"
            style="@style/button_style"
            android:text="@string/data_pass" />

        <Button
            android:id="@+id/menu_test"
            style="@style/button_style"
            android:text="@string/menu_test" />

        <Button
            android:id="@+id/listview_adapter"
            style="@style/button_style"
            android:text="@string/listview_adapter" />

        <Button
            android:id="@+id/recycler_view"
            style="@style/button_style"
            android:text="@string/recycler_view" />

        <Button
            android:id="@+id/service_button"
            style="@style/button_style"
            android:text="@string/service_test" />
    </LinearLayout>
</ScrollView>
