<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="keene.demo.coursedemo.ServiceTestScreen">

    <Button
        android:id="@+id/start_service"
        style="@style/button_style"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/start_intent_service"
        style="@style/button_style"
        android:text="@string/start_intent_service" />


    <Button
        android:id="@+id/bind_service"
        style="@style/button_style"
        android:text="@string/bind_service" />

    <Button
        android:id="@+id/send_msg"
        style="@style/button_style"
        android:text="@string/send_msg" />

    <TextView
        android:id="@+id/reply_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/reply_string" />

</LinearLayout>
